--- a/css/style.css
+++ b/css/style.css
@@ -18,12 +18,16 @@
 
 
 /* header design */
+nav {
+    max-width: 1110px;
+    margin: 0 auto;
+}
 .navbar {
     padding: 15px 0;
     justify-content: space-between;
 }
 .navbar .brand {
-    margin-left: 120px;
+   
     font-size: 1.5rem;
     font-weight: 700;
     color: #3A3A3A;
@@ -36,7 +40,7 @@
 }
 .menu li {
     list-style: none;
-    margin-right: 34px;
+    margin-left: 34px;
 }
 .menu li a {
     font-size: 1rem;
@@ -45,8 +49,61 @@
     color: #3A3A3A;
 }
 .menu .nav-icon {
-    margin-right: 84px;
+    /* margin-right: 84px; */
+   
 }
 .menu .nav-icon span i {
-    margin-right: 36px;
+    margin-left: 34px;
+    color: #3A3A3A;
+    font-size: 1rem;
 }
+/* banner design */
+.banner {
+    max-width: 1110px;
+    margin: 30px auto;
+    height: 600px;
+}
+.banner-content {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner-left-content {
+    max-width: 582px;
+}
+.banner-title {
+    font-size: 3.25rem;
+    font-weight: 700;
+    color: #3A3A3A;
+    line-height: 70px;
+
+}
+.banner-desc {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #3A3A3A;
+    line-height: 24px;
+    margin-top: 16px;
+}
+.banner-btn {
+    margin-top: 16px;
+    background-color: #E02C6D;
+    color: white;
+    padding: 10px 24px;
+    font-size: 1rem;
+    font-weight: 700;
+    margin-top: 16px;
+    border: none;
+    border-radius: 41px;
+}
+.banner-btn span {
+    display: inline-block;
+    margin: 2px 5px;
+    
+}
+.banner-right-content {
+    max-width: 440px;
+}
+/* .banner-right-content img {
+    width: 100%;
+} */
