--- a/css/style.css
+++ b/css/style.css
@@ -132,10 +132,82 @@ nav {
    max-width: 100%;
   
 }
+/* collection design  */
+.collection {
+    margin: 120px 0;
+}
+.collection .collection-title {
+    font-size: 1.75rem;
+    font-weight: 600;
+    color: #3A3A3A;
+    text-align: center;
+}
+.collection-card {
+    margin-top: 30px;
+}
+.card-content {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 0px;
+    row-gap: 10px;
+}
+
+.card {
+    width: 350px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    padding: 10px 17px;
+}
+.card img {
+    max-width: 100%;
+}
+.card .card-title {
+    margin-top: 6px;
+    font-size: 1.75rem;
+    font-weight: 500;
+    color: #18191F;
+}
+.card .price {
+    margin-top: 6px;
+    font-size: 1.5rem;
+    color: rgba(0, 0, 0, 0.871);
+}
+.card .rating {
+    margin-top: 8px;
+}
+.card .rating i {
+    color: #FB8200;
+}
+.card .rating span {
+    margin-left: 5px;
+    font-size: 14px;
+    color: #5E6366;
+}
+.card .card-desc {
+    margin-top: 5px;
+    max-width: 203px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #787885;
+}
+.card-btn {
+    text-align: right;
+}
+.card-btn a{
+    font-size: 16px;
+    font-weight: 700;
+    color: rgba(224, 44, 109, 0.87);
+    text-align: right;
+    margin-top: 30px;
+    display: inline-block;
+    text-decoration: none;
+    padding: 0 15px;
+}
+
 
 /* media-query */
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 576px){
     .navbar,
      ul,
     .img-box {
@@ -143,7 +215,8 @@ nav {
         flex-direction: column;
         justify-content: center;
     }
-    .nav-icon {
+    .nav-icon, 
+    .img-box  {
         display: none;
     }
     .banner-content {
@@ -153,7 +226,13 @@ nav {
     .img-box{
         margin: 30px 10px;
     }
-   
+
+    .card-content {
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+
+ 
 } 
 
 
